@@ -1,3 +1,7 @@
+2010-09-20  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/boot/i386/pc/boot.S: Ignore %dl if it's not in a sane range.
+
 2010-09-19  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Split config.h for util and core.
